--- a/listr/index.html
+++ b/listr/index.html
@@ -9,10 +9,10 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 
-    <!-- React Router DOM v5 (UMD) -->
+    <!-- React Router DOM v5 -->
     <script src="https://unpkg.com/react-router-dom@5/umd/react-router-dom.min.js"></script>
 
-    <!-- Babel -->
+    <!-- Babel (so we can write JSX inline) -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
@@ -198,12 +198,13 @@
 
 <script type="text/babel">
 
+/* React + Router */
 const { BrowserRouter, Switch, Route, useHistory, useParams } = window.ReactRouterDOM;
 const { useState, useEffect } = React;
 
-/* -----------------------------------
-   HOME
------------------------------------ */
+/* ---------------------------------------------------
+   HOME SCREEN
+--------------------------------------------------- */
 function HomeScreen() {
     const history = useHistory();
     return (
@@ -220,10 +221,7 @@ function HomeScreen() {
                         Spin up a ranking grid, drag items into place, and obsess over the order like a reasonable person.
                     </div>
 
-                    <button
-                        className="primary-button"
-                        onClick={() => history.push("/create")}
-                    >
+                    <button className="primary-button" onClick={() => history.push("/create")}>
                         CREATE A LIST <span>↗</span>
                     </button>
                 </div>
@@ -232,18 +230,15 @@ function HomeScreen() {
     );
 }
 
-/* -----------------------------------
-   CREATE
------------------------------------ */
-function CreateListScreen({ setListItems }) {
+/* ---------------------------------------------------
+   CREATE SCREEN
+--------------------------------------------------- */
+function CreateScreen({ setListItems }) {
     const history = useHistory();
     const [rawText, setRawText] = useState("");
 
     const handleStartRanking = async () => {
-        const lines = rawText
-            .split("\n")
-            .map(l => l.trim())
-            .filter(Boolean);
+        const lines = rawText.split("\n").map(x => x.trim()).filter(Boolean);
 
         if (!lines.length) {
             alert("Give me at least one item, king.");
@@ -255,22 +250,25 @@ function CreateListScreen({ setListItems }) {
         let id = null;
         try {
             const res = await fetch("/api/list", {
-                method:"POST",
-                headers:{ "Content-Type":"application/json" },
-                body:JSON.stringify({
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
                     items: lines,
                     timestamp: Date.now(),
-                    userAgent: navigator.userAgent
+                    userAgent: navigator.userAgent,
                 })
             });
             const data = await res.json();
             id = data?.id;
-        } catch (e) {
-            console.error("KV save error:", e);
+        } catch (err) {
+            console.error("Logging error:", err);
         }
 
-        if (id) history.push(`/list/${id}/rank`);
-        else history.push("/rank");
+        if (id) {
+            history.push(`/list/${id}/rank`);
+        } else {
+            history.push("/rank");
+        }
     };
 
     return (
@@ -285,7 +283,7 @@ function CreateListScreen({ setListItems }) {
                     <div className="create-heading">What are we ranking?</div>
                     <div className="create-subtitle">
                         Add one item per line — bands, movies, baby names, restaurants,
-                        whatever your brain is spiralling about.
+                        whatever your brain is currently spiralling about.
                     </div>
 
                     <div className="field-label">Items (one per line)</div>
@@ -318,9 +316,9 @@ Rilo Kiley
     );
 }
 
-/* -----------------------------------
-   RANKING SCREEN
------------------------------------ */
+/* ---------------------------------------------------
+   BACKEND-POWERED RANKING SCREEN
+--------------------------------------------------- */
 function RankingScreen() {
     const { listId } = useParams();
     const history = useHistory();
@@ -335,16 +333,15 @@ function RankingScreen() {
                 const res = await fetch(`/api/list/${listId}`);
                 const data = await res.json();
                 setItems(data.items || []);
-            } catch (err) {
-                console.error("Failed loading:", err);
+            } catch (e) {
+                console.error("Failed to load list", e);
             }
             setLoading(false);
         }
         load();
     }, [listId]);
 
-    const [isDroppingOnRanked, setIsDroppingOnRanked] = useState(false);
-
+    /* Drag/drop logic (unchanged, works fine) */
     const handleDragStartAvailable = (e, item) => {
         e.dataTransfer.setData("drag-type", "available");
         e.dataTransfer.setData("item", item);
@@ -357,50 +354,50 @@ function RankingScreen() {
 
     const handleDragOver = (e) => e.preventDefault();
 
+    const [isDroppingOnRanked, setIsDroppingOnRanked] = useState(false);
+
     const handleDropOnRankedContainer = (e) => {
         e.preventDefault();
         setIsDroppingOnRanked(false);
+        const dragType = e.dataTransfer.getData("drag-type");
 
-        const type = e.dataTransfer.getData("drag-type");
-        if (type === "available") {
+        if (dragType === "available") {
             const item = e.dataTransfer.getData("item");
-            if (!rankedItems.includes(item)) {
+            if (item && !rankedItems.includes(item)) {
                 setRankedItems([...rankedItems, item]);
                 setItems(items.filter(i => i !== item));
             }
-        } else {
-            const idx = parseInt(e.dataTransfer.getData("sourceIndex"));
+        } else if (dragType === "ranked") {
+            const sourceIndex = parseInt(e.dataTransfer.getData("sourceIndex"), 10);
             const updated = [...rankedItems];
-            const [moved] = updated.splice(idx,1);
+            const [moved] = updated.splice(sourceIndex, 1);
             updated.push(moved);
             setRankedItems(updated);
         }
     };
 
-    const handleDropOnRankedItem = (e, target) => {
+    const handleDropOnRankedItem = (e, targetIndex) => {
         e.preventDefault();
         e.stopPropagation();
         setIsDroppingOnRanked(false);
 
-        const type = e.dataTransfer.getData("drag-type");
+        const dragType = e.dataTransfer.getData("drag-type");
 
-        if (type === "available") {
+        if (dragType === "available") {
             const item = e.dataTransfer.getData("item");
-            if (!rankedItems.includes(item)) {
+            if (item && !rankedItems.includes(item)) {
                 const updated = [...rankedItems];
-                updated.splice(target, 0, item);
+                updated.splice(targetIndex, 0, item);
                 setRankedItems(updated);
                 setItems(items.filter(i => i !== item));
             }
         } else {
-            const source = parseInt(e.dataTransfer.getData("sourceIndex"));
-            if (source !== target) {
-                const updated = [...rankedItems];
-                const [moved] = updated.splice(source, 1);
-                const adjusted = source < target ? target - 1 : target;
-                updated.splice(adjusted, 0, moved);
-                setRankedItems(updated);
-            }
+            const sourceIndex = parseInt(e.dataTransfer.getData("sourceIndex"), 10);
+            const updated = [...rankedItems];
+            const [moved] = updated.splice(sourceIndex, 1);
+            const adjusted = sourceIndex < targetIndex ? targetIndex - 1 : targetIndex;
+            updated.splice(adjusted, 0, moved);
+            setRankedItems(updated);
         }
     };
 
@@ -418,12 +415,12 @@ function RankingScreen() {
         <div className="app-shell">
             <div className="app-shell-inner">
                 <div className="app-header">
-                    <div className="app-title">Listr · Ranking console</div>
+                    <div className="app-title">Listr · Ranking</div>
                     <div className="app-pill">LIST #{listId}</div>
                 </div>
 
                 <div className="container">
-
+                    {/* Available Items */}
                     <div className="panel">
                         <div className="panel-header">
                             <div>
@@ -436,24 +433,29 @@ function RankingScreen() {
                         </div>
 
                         <div className="list-body">
-                            <div className="hint">drag items to right-hand stack</div>
+                            <div className="hint">drag items to the right</div>
+
                             {items.map(item => (
                                 <div
                                     key={item}
                                     className="item"
                                     draggable
-                                    onDragStart={e => handleDragStartAvailable(e,item)}
+                                    onDragStart={(e) => handleDragStartAvailable(e, item)}
                                 >
                                     <span>{item}</span>
                                     <span className="ranked-badge"></span>
                                 </div>
                             ))}
-                            {!items.length && (
-                                <div className="ranked-empty-state">all items drafted</div>
+
+                            {items.length === 0 && (
+                                <div className="ranked-empty-state">
+                                    all items drafted →
+                                </div>
                             )}
                         </div>
                     </div>
 
+                    {/* Ranked Items */}
                     <div className="panel">
                         <div className="panel-header">
                             <div>
@@ -469,23 +471,21 @@ function RankingScreen() {
                             onDragEnter={() => setIsDroppingOnRanked(true)}
                             onDragLeave={() => setIsDroppingOnRanked(false)}
                         >
-                            {!rankedItems.length && (
-                                <div className="ranked-empty-state">
-                                    drop items here to begin
-                                </div>
+                            {rankedItems.length === 0 && (
+                                <div className="ranked-empty-state">drop items here</div>
                             )}
 
-                            {rankedItems.map((item,index) => (
+                            {rankedItems.map((item, index) => (
                                 <div
                                     key={item}
                                     className="ranked-item"
                                     draggable
-                                    onDragStart={e => handleDragStartRanked(e,index)}
+                                    onDragStart={(e) => handleDragStartRanked(e, index)}
                                     onDragOver={handleDragOver}
-                                    onDrop={e => handleDropOnRankedItem(e,index)}
+                                    onDrop={(e) => handleDropOnRankedItem(e, index)}
                                 >
                                     <span>
-                                        <span className="rank-number">#{index+1}</span>
+                                        <span className="rank-number">#{index + 1}</span>
                                         {item}
                                     </span>
                                     <span className="ranked-badge"></span>
@@ -493,16 +493,34 @@ function RankingScreen() {
                             ))}
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     );
 }
 
-/* -----------------------------------
-   ROUTER WRAPPER
------------------------------------ */
+/* ---------------------------------------------------
+   LOCAL FALLBACK RANKING
+--------------------------------------------------- */
+function RankingLocal({ initialItems }) {
+    if (!initialItems || !initialItems.length) {
+        return (
+            <div className="app-shell">
+                <div className="app-shell-inner">
+                    <div className="home-heading">No items — go create a list</div>
+                </div>
+            </div>
+        );
+    }
+
+    return (
+        <RankingScreen initialItems={initialItems} />
+    );
+}
+
+/* ---------------------------------------------------
+   APP ROUTER
+--------------------------------------------------- */
 function App() {
     const [listItems, setListItems] = useState([]);
 
@@ -514,17 +532,17 @@ function App() {
 
                 <Route
                     path="/create"
-                    render={() => <CreateListScreen setListItems={setListItems} />}
+                    render={() => <CreateScreen setListItems={setListItems} />}
                 />
 
                 <Route
                     path="/list/:listId/rank"
-                    render={() => <RankingScreen />}
+                    component={RankingScreen}
                 />
 
                 <Route
                     path="/rank"
-                    render={() => <RankingScreen initialItems={listItems} />}
+                    render={() => <RankingLocal initialItems={listItems} />}
                 />
 
             </Switch>
@@ -532,7 +550,7 @@ function App() {
     );
 }
 
-ReactDOM.render(<App/>, document.getElementById("root"));
+ReactDOM.render(<App />, document.getElementById("root"));
 
 </script>
 </body>
