--- a/listr/index.html
+++ b/listr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Listr · Debug Build</title>
+    <title>Listr</title>
 
     <!-- React + ReactDOM -->
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
